--- a/src/Components/Generation/Generation.css
+++ b/src/Components/Generation/Generation.css
@@ -15,3 +15,18 @@
   padding: 0 0 0 0;
   border: none;
 }
+
+.component-container {
+  height: 100%;
+  width: 80%;
+  margin: 3rem 10rem 2rem 10rem;
+  padding: 5rem 10rem 10rem 10rem;
+  border-radius: 4rem;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+
+ .button-container {
+    /* 다른 버튼 스타일 설정 */
+    margin-right: 2rem; /* 두 버튼 간격 사이에 2rem 마진 추가 */
+}
