--- a/src/Shared/Navbar/Navbar.css
+++ b/src/Shared/Navbar/Navbar.css
@@ -1,10 +1,11 @@
 .navbar-container {
   display: flex;
-  background-color: #363740;
+  background-color: #ffffff;
   min-height: 5rem;
-  box-shadow: 0 0 8px rgba(91, 91, 91, 0.15);
+  box-shadow: 0 0 8px rgba(255, 255, 255, 0.15);
   z-index: 1;
   align-items: center;
+  margin: 0 10rem 0 10rem;
   
 }
 
@@ -13,7 +14,8 @@
   width: 4rem;
   height: 3rem;
   padding: 0.25rem 0 0.25rem 1.25rem;
-  margin: auto 0; 
+  margin-right: 5rem;
+  /* margin: auto 0;  */
 }
 
 .navbar-itemList {
@@ -54,7 +56,7 @@
 }
 
 .nav-name-active {
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 /* Edit all items for mobile displays */
